Aaron 1/14/2024 1: Worked on document

--- a/Document/gloss.tex
+++ b/Document/gloss.tex
@@ -184,3 +184,4 @@
 \newacronym{gacm}{GACM}{Grid-Aware Charge Management}
 \newacronym{iso}{ISO}{Independent System Operator}
 \newacronym{dcopf}{DC-OPF}{DC Optimal Power Flow}
+\newacronym{lmp}{LMP}{Location Marginal Price}
